[UPDATE] TestCode 정리