@@ -14,13 +14,14 @@ import com.seulmae.seulmae.workplace.entity.Workplace;
 import com.seulmae.seulmae.workplace.repository.WorkScheduleRepository;
 import com.seulmae.seulmae.workplace.repository.WorkplaceJoinHistoryRepository;
 import com.seulmae.seulmae.workplace.repository.WorkplaceRepository;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
@@ -28,10 +29,13 @@ import org.springframework.web.context.WebApplicationContext;
 
 import java.time.LocalTime;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -108,7 +112,6 @@ class UserWorkplaceControllerTest {
         userWorkScheduleRepository.deleteAll();
         workplaceJoinHistoryRepository.deleteAll();
         wageRepository.deleteAll();
-        userWorkplaceRepository.deleteAll();
         workScheduleRepository.deleteAll();
         userWorkplaceRepository.deleteAll();
         workplaceRepository.deleteAll();
@@ -117,7 +120,6 @@ class UserWorkplaceControllerTest {
 
 
     @Test
-    @MockUser(userId = 2L)
     @DisplayName("근무지 내 유저정보 - 성공")
     void getUserInfoWithWorkplace() throws Exception {
         Workplace workplace = workplaceRepository.findAll().getFirst();
@@ -137,32 +139,35 @@ class UserWorkplaceControllerTest {
         mockSetUpUtil.createWage(mockUser, workplace, baseWage, payday);
         mockSetUpUtil.createUserWorkSchedule(mockUser, workSchedule);
 
-        ResultActions result = mockMvc.perform(get(URL).param("userWorkplaceId", String.valueOf(userWorkplace.getIdUserWorkplace())));
-
-        System.out.println(result.andReturn().getResponse().getContentAsString());
-
-        result
+        mockMvc.perform(get(URL)
+                .param("userWorkplaceId", String.valueOf(userWorkplace.getIdUserWorkplace()))
+                .with(user(mockUser)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.data.name").value(name))
                 .andExpect(jsonPath("$.data.payDay").value(payday))
                 .andExpect(jsonPath("$.data.workScheduleDto.workScheduleTitle").value("오전근무"));
 
+
     }
 
     @Test
-    @DisplayName("근무지 탈퇴 - 성공")
-    @MockUser(userId = 2L)
+    @DisplayName("유저 근무지 탈퇴 - 성공")
+    @Disabled
     void withdrawWorkplace() throws Exception {
-        Workplace workplace = workplaceRepository.findAll().get(0);
+        Workplace workplace = workplaceRepository.findAll().getFirst();
+
         User mockUser = mockSetUpUtil.createUser("test1234", "qwer1234!", "01024231234", "이름", "19920103", true);
+
         UserWorkplace userWorkplace = mockSetUpUtil.createUserWorkplace(mockUser, workplace, false);
-        userWorkplaceRepository.saveAndFlush(userWorkplace);
 
-        ResultActions result = mockMvc.perform(delete(URL)
-                .param("workplaceId", String.valueOf(workplace.getIdWorkPlace())));
+        mockMvc.perform(delete(URL)
+                        .with(user(mockUser))
+                        .param("workplaceId", String.valueOf(workplace.getIdWorkPlace())))
+                .andDo(print())
+                .andExpect(status().isOk());
 
 
-        result.andExpect(status().isOk());
+//        result.andExpect(status().isOk());
         UserWorkplace deletedUserWorkplace = userWorkplaceRepository.findById(userWorkplace.getIdUserWorkplace())
                 .orElse(null);
         assertThat(deletedUserWorkplace.getIsDelUserWorkplace()).isTrue();
